# livy-tee

./: Cargo.toml  LICENSE  README.md  deny.toml
docs/: azure-attestation.md  plan.md  remediation-plan.md  verifiable-proofs.md
examples/: getting_started.rs  ita_cli_cross_verify.rs  tee_verify.rs
src/: attest.rs  bind.rs  cloud.rs  error.rs  evidence.rs  lib.rs  parser.rs  public_values.rs  report.rs  types.rs
src/bind/: attestation.rs  local.rs  mod.rs
src/generate/: azure.rs  mock.rs  mod.rs  tsm.rs
src/verify/: codec.rs  extract.rs  ita.rs  mod.rs
tests/: commit_hashed_semantics.rs  integration.rs  mock_ita.rs  signed_verification.rs  tdx_integration.rs
