[package]
name = "livy-tee"
version = "0.1.0"
edition = "2021"
description = "Intel TDX quote generation and verification for the Livy provenance system. Open-source so users can independently verify TEE execution claims."
license-file = "LICENSE"
keywords     = ["tdx", "attestation", "tee", "intel", "provenance"]
categories   = ["cryptography", "hardware-support", "api-bindings", "authentication"]
repository   = "https://github.com/livylabs/livy-tee"
homepage     = "https://livylabs.xyz"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow    = "1"
thiserror = "1"
sha2      = "0.10"
hex       = "0.4"
base64    = "0.22"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1", features = ["v4", "serde"] }

reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
jsonwebtoken = { version = "9", optional = true }

[dev-dependencies]
base64     = "0.22"
serde_json = "1"
tokio      = { version = "1.48", features = ["full"] }

[features]
# Default: TSM configfs generation — requires TDX hardware (kernel ≥ 6.7).
# For development without hardware: cargo build --features mock-tee
default    = []
mock-tee   = []
# ita-verify: Intel Trust Authority REST API verification
ita-verify = ["dep:reqwest", "dep:jsonwebtoken"]
